--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: Shruthi N
+logo: /assets/img/shru.png
+description: IIITB upgrad student
+
 theme: jekyll-theme-minimal
